--- a/bbq.html
+++ b/bbq.html
@@ -36,7 +36,6 @@
               </li>
               <li class="nav-item">
                 <a class="navbar-brand" href="index.html">
-                    <img class="logo" src="images/logo_big.png">
                 </a>
               </li>
               <li class="nav-item">
@@ -60,26 +59,42 @@
         <div class="container">
             <div class="row">
                 <div class="gallery" id="responsive-images-demo" data-responsive="img/1-375.jpg 375, img/1-480.jpg 480, img/1-757.jpg 757" data-src="img/img.jpg">
-                    <a href="images/bbq.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/bbq.jpg" /></a>
-                    <a href="images/coming1.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming1.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
-                    <a href="images/coming2.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming2.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
-                    <a href="images/karaoke.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/karaoke.jpg" /></a>
-                    <a href="images/Neon-sign.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/Neon-sign.jpg" /></a>
-                    <a href="images/karaoke.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/karaoke.jpg" /></a>
-                    <a href="images/coming2.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming2.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
+                    <a href="images/bbq/1.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/1.jpg" /></a>
+                    <a href="images/bbq/2.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/2.jpg" /></a>
+                    <a href="images/bbq/3.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/3.jpg" /></a>
+                    <a href="images/bbq/4.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/4.jpg" /></a>
+                    <a href="images/bbq/5.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/5.jpg" /></a>
+                    <a href="images/bbq/6.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/6.jpg" /></a>
+                    <a href="images/bbq/7.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/7.jpg" /></a>
+                    <a href="images/bbq/8.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/8.jpg" /></a>
+                    <a href="images/bbq/9.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/9.jpg" /></a>
+                    <a href="images/bbq/10.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/10.jpg" /></a>
+                    <a href="images/bbq/11.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/11.jpg" /></a>
+                    <a href="images/bbq/12.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/12.jpg" /></a>
+                    <a href="images/bbq/13.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/13.jpg" /></a>
+                    <a href="images/bbq/14.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/14.jpg" /></a>
+                    <a href="images/bbq/15.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/15.jpg" /></a>
+                    <a href="images/bbq/16.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/16.jpg" /></a>
+                    <a href="images/bbq/17.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/17.jpg" /></a>
+                    <a href="images/bbq/18.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/bbq/18.jpg" /></a>
                 </div>
             </div>
         </div>
@@ -93,7 +108,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/korilla.kbbq/"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="bi bi-youtube"></i></a>
@@ -154,6 +169,8 @@
             counter: false
         });
     </script>
+
+    <script src="js/main.js"></script>
 
 </body>
 </html>
