--- a/location.html
+++ b/location.html
@@ -30,7 +30,6 @@
               </li>
               <li class="nav-item">
                 <a class="navbar-brand" href="index.html">
-                    <img class="logo" src="images/logo_big.png">
                 </a>
               </li>
               <li class="nav-item">
@@ -82,7 +81,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/korilla.kbbq/"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="bi bi-youtube"></i></a>
@@ -125,6 +124,6 @@
     <script>
         var myModal = new bootstrap.Modal(document.getElementById('myModal'), options)
     </script>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
