--- a/roof.html
+++ b/roof.html
@@ -36,7 +36,6 @@
               </li>
               <li class="nav-item">
                 <a class="navbar-brand" href="index.html">
-                    <img class="logo" src="images/logo_big.png">
                 </a>
               </li>
               <li class="nav-item">
@@ -60,26 +59,24 @@
         <div class="container">
             <div class="row">
                 <div class="gallery" id="responsive-images-demo" data-responsive="img/1-375.jpg 375, img/1-480.jpg 480, img/1-757.jpg 757" data-src="img/img.jpg">
-                    <a href="images/bbq.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/bbq.jpg" /></a>
-                    <a href="images/coming1.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming1.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
-                    <a href="images/coming2.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming2.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
-                    <a href="images/karaoke.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/karaoke.jpg" /></a>
-                    <a href="images/Neon-sign.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/Neon-sign.jpg" /></a>
-                    <a href="images/karaoke.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/karaoke.jpg" /></a>
-                    <a href="images/coming2.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coming2.jpg.jpg" /></a>
-                    <a href="images/coupon.jpg.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
-                        <img src="images/coupon.jpg.jpg" /></a>
+                    <a href="images/roof/1.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/1.jpg" /></a>
+                    <a href="images/roof/2.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/2.jpg" /></a>
+                    <a href="images/roof/3.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/3.jpg" /></a>
+                    <a href="images/roof/4.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/4.jpg" /></a>
+                    <a href="images/roof/5.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/5.jpg" /></a>
+                    <a href="images/roof/6.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/6.jpg" /></a>
+                    <a href="images/roof/7.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/7.jpg" /></a>
+                    <a href="images/roof/8.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/8.jpg" /></a>
+                    <a href="images/roof/9.jpg" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2-757.jpg 757">
+                        <img src="images/roof/9.jpg" /></a>
                 </div>
             </div>
         </div>
@@ -93,7 +90,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/korilla.kbbq/"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="bi bi-youtube"></i></a>
@@ -154,6 +151,6 @@
             counter: false
         });
     </script>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
