--- a/reservation.html
+++ b/reservation.html
@@ -60,7 +60,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/korilla.kbbq/"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="bi bi-youtube"></i></a>
